styles/post.css
.post pre[class*="language-"] {
    @apply mb-6 border-4 border-gray-800 bg-transparent;
}

.post pre[class*="language-"],
.post pre[class*="language-"] code {
    font-size: 0.8rem !important;
    color: #dc6a73 !important;
}

.post pre[class*="language-"] .token.function {
    color: #61afef;
}

.post pre[class*="language-"] .token.string {
    color: #96c078;
}

.post pre[class*="language-"] .token.comment {
    color: #aaa;
}

.post blockquote {
    @apply pl-6 py-2 mb-5 relative;
}

.post blockquote::before {
    @apply bottom-0 top-0 left-0 block absolute bg-gray-800;
    content: "";
    width: 0.5rem;
    height: 100%;
}

.post blockquote footer {
    @apply text-gray-100 mt-2 text-base;
}

.post ol,
.post ul {
    @apply pl-8 mb-5;
}

.post ol {
    @apply list-decimal;
}

.post ul {
    @apply list-disc;
}

.post ol li,
.post ul li {
    @apply mb-2;
}

.post em {
    @apply text-orange-500;
}

.post a {
    @apply border-b border-orange-500;
}

.post a:focus,
.post a:hover {
    @apply text-orange-500;
}

.post table {
    @apply mt-5 mb-10;
}
.post table thead {
    @apply border-b-2 border-orange-500;
}
.post table th,
.post table td {
    @apply py-1 px-4;
}
.post table th {
    @apply pb-4;
}
.post table tr {
    @apply border-b border-gray-700;
}
.post table tr:first-of-type td {
    @apply pt-4;
}

